--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main>
     <section class="intro">
-      <img src="me.jpg" alt="미지의 대표 이미지" class="main-image">
+      <img src="your-image.jpg" alt="미지의 대표 이미지" class="main-image">
       <p>이 공간은 내가 만들고 느낀 것들을 기록하는 곳이에요. 천천히 둘러보세요 :)</p>
     </section>
   </main>
