--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <header>
     <h1>mizi log</h1>
-    <p class="tagline">나를 잃지 않기 위해서 경험을 만들어요</p>
+    <p class="tagline">나를 잃지 않기 위해서 경험을 만들어요:O</p>
   </header>
 
   <nav>
     <ul>
-      <li><a href="#">인스타툰</a></li>
+      <li><a href="instatoon.html">인스타툰</a></li>
       <li><a href="#">캐릭터 디자인</a></li>
       <li><a href="#">3D 모델링</a></li>
       <li><a href="#">UX/UI</a></li>
@@ -24,7 +24,7 @@
 
   <main>
     <section class="intro">
-      <img src="your-image.jpg" alt="미지의 대표 이미지" class="main-image">
+      <img src="me.jpg" alt="미지의 대표 이미지" class="main-image">
       <p>이 공간은 내가 만들고 느낀 것들을 기록하는 곳이에요. 천천히 둘러보세요 :)</p>
     </section>
   </main>
