--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>mizi log</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet"/>
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
 
   <main>
     <section class="intro">
-      <img src="me.jpg" alt="미지의 대표 이미지" class="main-image">
+      <img src="me.jpg" alt="미지의 대표 이미지" class="main-image"/>
       <p>이 공간은 내가 만들고 느낀 것들을 기록하는 곳이에요. 천천히 둘러보세요 :)</p>
     </section>
   </main>
