--- a/instatoon.html
+++ b/instatoon.html
@@ -5,44 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>인스타툰 - mizi log</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    .card-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      padding: 2rem;
-    }
-    .card {
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      overflow: hidden;
-      background-color: #fff;
-      text-align: center;
-      transition: transform 0.2s ease;
-      text-decoration: none;
-      color: inherit;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .card img {
-      width: 100%;
-      height: auto;
-    }
-    .card h3 {
-      margin: 0.5rem 0 0.2rem;
-    }
-    .card p {
-      margin: 0 0 1rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-  </style>
 </head>
 <body>
   <header>
     <h1>인스타툰</h1>
     <p class="tagline">미지의 이야기를 담은 감성툰</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">홈</a></li>
+        <li><a href="instatoon.html">인스타툰</a></li>
+        <li><a href="#">캐릭터 디자인</a></li>
+        <li><a href="#">3D 모델링</a></li>
+        <li><a href="#">UX/UI</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
