--- a/instatoon_a1.html
+++ b/instatoon_a1.html
@@ -9,14 +9,24 @@
 <body>
   <header>
     <h1>옛 예술가들의 지혜</h1>
-    <p class="tagline">알고 싶지 않았어요</p>
+    <p class="tagline">예술가들이 왜 술먹고 약하는지 알 것 같아.</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">홈</a></li>
+        <li><a href="instatoon.html">인스타툰</a></li>
+        <li><a href="#">캐릭터 디자인</a></li>
+        <li><a href="#">3D 모델링</a></li>
+        <li><a href="#">UX/UI</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main style="text-align:center; padding: 2rem;">
     <img src="A1.jpg" alt="첫 번째 컷" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;">
-    <img src="a2.jpg" alt="두 번째 컷" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;">
-    <!-- 추가 컷이 있을 경우 여기에 이어서 이미지 추가 -->
-    <!-- <img src="b1_2.jpg" alt="두 번째 컷" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;"> -->
+    <img src="a2.jpg" alt="본문 이미지" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;">
+    <div style="margin-top: 2rem;">
+      <a href="instatoon.html" style="color: #0d6a31; text-decoration: underline;">← 목록으로 돌아가기</a>
+    </div>
   </main>
 
   <footer>
