--- a/instatoon_b1.html
+++ b/instatoon_b1.html
@@ -9,7 +9,16 @@
 <body>
   <header>
     <h1>진심은 시대를 타지 않는다</h1>
-    <p class="tagline">이영지 small girl</p>
+    <p class="tagline">이영지 노래 small girl</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">홈</a></li>
+        <li><a href="instatoon.html">인스타툰</a></li>
+        <li><a href="#">캐릭터 디자인</a></li>
+        <li><a href="#">3D 모델링</a></li>
+        <li><a href="#">UX/UI</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main style="text-align:center; padding: 2rem;">
@@ -17,8 +26,12 @@
     <img src="b2.jpg" alt="본문 이미지" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;">
     <img src="b3.jpg" alt="본문 이미지" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;">
     <img src="b4.jpg" alt="본문 이미지" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;">
-    <!-- 추가 컷이 있을 경우 여기에 이어서 이미지 추가 -->
-    <!-- <img src="b1_2.jpg" alt="두 번째 컷" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;"> -->
+    <div style="margin-top: 2rem; display: flex; flex-direction: column; gap: 1rem; align-items: center;">
+      <a href="instatoon.html" style="color: #0d6a31; text-decoration: underline;">← 목록으로 돌아가기</a>
+      <div style="display: flex; gap: 2rem;">
+        <a href="instatoon_a1.html" style="color: #0d6a31; text-decoration: underline;">← 이전 화</a>
+      </div>
+    </div>
   </main>
 
   <footer>
