--- a/instatoon.html
+++ b/instatoon.html
@@ -43,6 +43,15 @@
   <header>
     <h1>인스타툰</h1>
     <p class="tagline">미지의 이야기를 담은 감성툰</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">홈</a></li>
+        <li><a href="instatoon.html">인스타툰</a></li>
+        <li><a href="#">캐릭터 디자인</a></li>
+        <li><a href="#">3D 모델링</a></li>
+        <li><a href="#">UX/UI</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
