--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul>
       <li><a href="instatoon.html">인스타툰</a></li>
       <li><a href="#">캐릭터 디자인</a></li>
-      <li><a href="#">3D 모델링</a></li>
+      <li><a href="modeling.html">3D 모델링</a></li>
       <li><a href="#">UX/UI</a></li>
     </ul>
   </nav>
