--- a/instatoon_a1.html
+++ b/instatoon_a1.html
@@ -15,7 +15,7 @@
         <li><a href="index.html">홈</a></li>
         <li><a href="instatoon.html">인스타툰</a></li>
         <li><a href="#">캐릭터 디자인</a></li>
-        <li><a href="#">3D 모델링</a></li>
+        <li><a href="modeling.html">3D 모델링</a></li>
         <li><a href="#">UX/UI</a></li>
       </ul>
     </nav>
