--- a/modeling_bit.html
+++ b/modeling_bit.html
@@ -22,9 +22,9 @@
   </header>
 
   <main style="text-align: center; padding: 2rem;">
-    <img src="BIT_thumb.jpg" alt="대표 이미지" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;">
-    <img src="bit_01.jpg" alt="BIT 이미지 1" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;">
-    <img src="bit_02.jpg" alt="BIT 이미지 2" style="max-width:100%; border-radius: 12px; margin-bottom: 1rem;">
+    <img src="BIT_thumb.jpg" alt="대표 이미지" style="max-width:600px; width:100%; border-radius: 12px; margin-bottom: 1rem;">
+    <img src="bit_01.jpg" alt="BIT 이미지 1" style="max-width:600px; width:100%; border-radius: 12px; margin-bottom: 1rem;">
+    <img src="bit_02.jpg" alt="BIT 이미지 2" style="max-width:600px; width:100%; border-radius: 12px; margin-bottom: 1rem;">
 
     <div style="margin-top: 2rem;">
       <a href="modeling.html" style="color: #0d6a31; text-decoration: underline;">← 목록으로 돌아가기</a>
