--- a/modeling.html
+++ b/modeling.html
@@ -26,7 +26,7 @@
       <h2>제품 모델링</h2>
       <div class="card-container">
         <a class="card" href="modeling_bit.html">
-          <img src="BIT_thumb.jpg" alt="BIT 썸네일" />
+          <img src="BIT_thumb.jpg" alt="BIT 썸네일" style="max-width:600px; width:100%; border-radius: 12px; margin-bottom: 1rem;">
           <h3>서울시 BIT 프로젝트</h3>
           <p>서울시 버스정보 안내단말기 개선</p>
         </a>
